# Chess-Engine-cpp

./: .gitignore  BoardDisplay.cpp  BoardDisplay.h  CMakeList.txt  CMakeLists.txt  CMakePresets.json  Chess Engine.cpp  Chess Engine.sln  Chess Engine.vcxproj  Chess Engine.vcxproj.filters  Magnus.uci  Nakamura.uci  StartingMoves.txt  chess.cpp  chess.h  desktop.ini  engine.cpp  engine.h  engine1.cpp  engine1.h  engine2.cpp  engine2.h  match_log.txt  zobrist.cpp  zobrist.h
Engine Executable/: Engine Executable.cpp  Engine Executable.vcxproj  Engine Executable.vcxproj.filters
src/: BoardDisplay.cpp  BoardDisplay.h  book_builder.cpp  chess.cpp  chess.h  engine.cpp  engine.h  engine1.cpp  engine2.cpp  engine_tuning.cpp  main.cpp  opening_book.cpp  opening_book.h  perft_cli.cpp  perft_suite.cpp  positions.txt  zobrist.cpp
